1.2.0:
    Atualizado Zend Framework para versão 1.10.0
    Alterada interface de cadastro de ramais para modelo usado em sistema de
troncos.

1.1.7:
    Inclusão de contatos em lote via CSV.
    Ajuste no conceito de Tarifação
    Busca de arquivos de gravação utilizando classe Manutenção

1.1.6:
    Suporte a geração de formulários dinâmicos a partir de XML especificado em
cada ação das regras de negócio. [modularização]
    Reestruturação da tela de cadastro/edição de regras permitindo reordenamento
com "arrastar e soltar"
    Adição de Alias de Expressão Regular para ser usado com as Regras de Negócio
    Corrigido sistema de controle de tempo em minutos para ramais e troncos.
    Corrigido bug na seleção do modo debug.
    Corrigido bug na restauração da ação de reescrita de requisição nas regras
de negócio.
    Adicionado suporte a ramal com interface manual
    Corrigido "Notices" no relacionamento de ramais em modo debug.

1.1.5:
    Adição de um sistema de plugins para as Regras de Negócio.
    Transferências agora passam pelo AGI do snep.
        Transferências para números externos.
        Transferências funcionando com Siga-me para números externos.

1.1.4:
    Correção de bug na criação dos vinculos dos ramais.
    Adicionado modo de DTMF para discagem de qualquer tipo de tronco.
    Corrigido comportamento das Tarifas

1.1.3:
    Corrigido ação Editar origem/destino nas regras de negócio onde sufixo não
era adicionado.
    Melhorado sistema de limite de tempo na chamada telefonica para ações de
discagem via troncos.
    Adicionado verificação antes de salvar uma regra de negócio onde um tronco
não seja especificado.
    Adicionado modo de discagem via DTMF para todos os tipos de tronco.
    Corrigido bug em relatório de chamadas para consulta por grupos de ramais em
destino.
    Corrigido bug no envio de emails após uso de tronco redundante.

1.1.2:
    Mudança na forma como são executadas as instruções ao banco de dados na